# haskell-ioutcomes

./: .ghc.environment.x86_64-linux-8.6.5  .gitignore  CHANGELOG.md  LICENSE  README.md  haskell-ioutcomes.cabal
database/: api.db  api.db-shm  api.db-wal
dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
lib/: Main.hs
resources/view/email/: registration_confirmation.html
src/: Auth.hs  DateTime.hs  Domain.hs  Mail.hs  Main.hs  Main2.hs  Persistence.hs  Repository.hs  String.hs  Text.hs  URI.hs  Validation.hs
src/Entity/: Category.hs  Common.hs  Id.hs  Payment.hs  Tag.hs  Token.hs  User.hs
